<resources>

    <!-- NOMBRE APLICACIÓN -->

    <string name="app_name">TheGlass</string>

    <!-- BOTONES LOGIN/REGISTER -->

    <string name="login">Iniciar sesión</string>
    <string name="loginBar">Iniciar sesión como entidad</string>
    <string name="register">Registrarse</string>
    <string name="logout">Cerrar sesión</string>
    <string name="userName">Nombre de usuario</string>
    <string name="selectPhoto">Seleciona una foto</string>
    <string name="nextT">Siguiente</string>
    <string name="returnT">Volver</string>

    <!-- INPUTS LOGIN/REGISTER -->

    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="passwordConfim">Confirmar contraseña</string>

    <!-- TEXTOS ERRORES -->

    <string name="error">Credenciales incorrectas</string>
    <string name="errorPassLenght">"La contraseña debe contener al menos 6 carácteres</string>
    <string name="errorRegisterPass">Las contraseñas no coinciden</string>
    <string name="errorRegisterEmail">La dirección de correo ya está en uso</string>
    <string name="errorLogin">"Datos introducidos incorrectos"</string>
    <string name="failedAutentication">Autenticación fallida</string>
    <string name="fillInuts">Debes rellenar todos los campos</string>
    <string name="errorEmail">Debes instroducir un correo válido</string>
    <string name="errorRegisterAdvanced">Primero debes seleccionar una foto</string>
    <string name="errorUsername">Debes introduccir un nombre de usuario</string>
    <string name="loginBarClient">Esa cuenta no es una cuenta empresarial</string>
    <string name="usernameEmpty">El nombre de usuario no puede estar vacío</string>
    <string name="errorTotal">La total de la cuenta no puede estar vacío</string>


    <!-- TIPOS ACIERTOS -->

    <string name="usernameChangesucces">Cambio de nombre de usuario exitoso</string>
    <string name="photChangesucces">Cambio de foto de perfil exitoso</string>
    <string name="addedPonints">Puntos añadidos</string>

    <!-- BOTONES DE NAVEGACIÓN -->

    <string name="offers">Ofertas</string>
    <string name="map">Mapa</string>
    <string name="rank">Ranking</string>
    <string name="settings">Ajustes</string>
    <string name="scanner">Lector QR</string>

    <!-- BOTONES DE CONFIGURACIÓN -->

    <string name="changeUsername">Cambiar nombre de usuario</string>
    <string name="changePhoto">Cambiar foto de perfil</string>
    <string name="textChangeUsername">Introduce un nombre de usuario</string>
    <string name="save">Guardar</string>
    <string name="createAccount">Crear cuenta</string>

    <!-- OTROS -->

    <string name="total">Ingrese el total de la cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bar_menu">BarMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="google_map_key">AIzaSyDrVIq1MDDY-ARakcD3EOmaH-mruAAwzLQ</string>

</resources>