<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="411dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#474747"
            android:background="@drawable/roundedbutton"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="#474747"
            android:background="@drawable/roundedbutton"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#919191"
            android:onClick="close"
            android:text="Cerrar sesión"
            android:background="@drawable/roundedbutton"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/loginBarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:background="@drawable/roundedbutton"
            android:onClick="clientMenu"
            android:text="@string/loginBar"
            android:textColor="#474747" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="440dp"
        android:layout_height="401dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:srcCompat="@drawable/logosinfondo" />
</androidx.constraintlayout.widget.ConstraintLayout>