<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".registerAdvanced">

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/selecPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="#B1B0B0"
            android:onClick="buttonPress"
            android:text="@string/selectPhoto"
            android:textColor="#474747"
            android:layout_marginBottom="10dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="Nombre de usuario"
            android:inputType="textPersonName"
            android:padding="25dp"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="#FFFFFF"
            android:onClick="buttonPress"
            android:text="@string/next"
            android:textColor="#474747"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/errorRegisterAdvanced"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/error_box"
            android:gravity="center"
            android:textColor="#510303"
            android:visibility="invisible"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="#FFFFFF"
            android:onClick="login"
            android:text="@string/returnT"
            android:textColor="#474747" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>